--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Organic Chemistry Tutoring</title>
-  </head>
-  <body>
-    <h1>Welcome to Organic Chemistry Tutoring</h1>
-    <p>This site is under construction.</p>
-  </body>
+<head>
+  <title>Organic Chemistry Tutoring</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h1>Organic Chemistry Tutoring</h1>
+  <p>One-on-one tutoring for Organic Chemistry I & II.</p>
+
+  <h2>What I Offer</h2>
+  <ul>
+    <li>Reaction mechanisms</li>
+    <li>Spectroscopy (NMR, IR, MS)</li>
+    <li>Synthesis strategies</li>
+    <li>Exam prep</li>
+  </ul>
+
+  <h2>Pricing</h2>
+  <p>$60 per hour</p>
+
+  <a href="payment.html">Book a Session</a>
+</body>
 </html>
