--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Organic Chemistry Tutoring</title>
+  <title>teaching organic chemistry </title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -88,28 +88,26 @@
 <body>
 
   <header>
-    <h1>Organic Chemistry Tutoring</h1>
-    <p>Master Organic Chemistry with clear explanations, exam-focused strategies, and an unlimited supply of challenging multi-step synthesis problems — all with full answer keys.</p>
+    <h1>kyle teaches †teaching organic chemistry </h1>
+    <p>just a TA spreading the gospel of how cool (organic) chemistry can be. I provide practice problems, clear-explanations, and exam-focused strategies.</p>
   </header>
 
   <section>
     <div class="card">
       <h2>Who I Tutor</h2>
       <ul>
-        <li>High school students (intro & advanced chemistry)</li>
-        <li>Premed students</li>
-        <li>Organic Chemistry I</li>
-        <li>Organic Chemistry II</li>
+        <li>High school students (Regents and AP chemistry)</li>
+        <li>College level chemistry (Organic chemistry I and II)</li>
+        <li>MCAT chemistry and biochemistry preparation</li>
       </ul>
     </div>
 
     <div class="card">
       <h2>What You Get</h2>
       <ul>
-        <li>Step-by-step reaction mechanism explanations</li>
         <li>Unlimited multi-step synthesis practice problems</li>
         <li>Complete answer keys with strategic reasoning</li>
-        <li>Reaction pattern recognition and retrosynthesis training</li>
+        <li>Reaction pattern recognition and retrosynthesis practice</li>
         <li>Exam and MCAT-oriented problem-solving techniques</li>
       </ul>
     </div>
@@ -117,18 +115,14 @@
     <div class="card">
       <h2>Multi-Step Synthesis Focus</h2>
       <p>
-        Students receive continuous access to original, exam-style multi-step synthesis problems. Each problem includes:
+        Students receive continuous access to original, exam-style multi-step synthesis problems that have you practice:
       </p>
       <ul>
         <li>Functional group interconversions</li>
         <li>Stereochemical control</li>
-        <li>Protecting group strategy</li>
-        <li>Full retrosynthetic breakdown</li>
-        <li>Detailed, written answer keys</li>
+        <li>Protecting groups</li>
+        <li>Retrosynthesis</li>
       </ul>
-      <p>
-        New problems are introduced regularly, ensuring students never run out of high-quality practice.
-      </p>
     </div>
 
     <div class="cta">
@@ -136,9 +130,9 @@
       <p>
         Sessions are flexible and tailored to your course and goals. Payments are accepted via Venmo.
       </p>
-      <a href="https://venmo.com/YOUR_VENMO_USERNAME" target="_blank">Pay with Venmo</a>
+      <a href="https://venmo.com/kylehsu1" target="_blank">Pay with Venmo</a>
       <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.85;">
-        Replace <strong>YOUR_VENMO_USERNAME</strong> with your actual Venmo handle.
+        1st session free!
       </p>
     </div>
   </section>
@@ -149,10 +143,10 @@
       <div class="contact">
         <div>
           <p><strong>Email:</strong><br />
-            yourname@email.com
+            kyle.hsu4305@gmail.com
           </p>
           <p><strong>Availability:</strong><br />
-            Weekdays & weekends by appointment
+            Please email
           </p>
         </div>
         <div>
