--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
 
   <header>
-    <h1>kyle teaches †teaching organic chemistry </h1>
+    <h1>kyle teaches organic chemistry </h1>
     <p>just a TA spreading the gospel of how cool (organic) chemistry can be. I provide practice problems, clear-explanations, and exam-focused strategies.</p>
   </header>
 
