--- a/index.html
+++ b/index.html
@@ -92,38 +92,123 @@
     <p>just a TA spreading the gospel of how cool (organic) chemistry can be. I provide practice problems, clear-explanations, and exam-focused strategies.</p>
   </header>
 
-  <section>
-    <div class="card">
-      <h2>Who I Tutor</h2>
-      <ul>
-        <li>High school students (Regents and AP chemistry)</li>
-        <li>College level chemistry (Organic chemistry I and II)</li>
-        <li>MCAT chemistry and biochemistry preparation</li>
-      </ul>
-    </div>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Chemistry Tutoring</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <div class="card">
-      <h2>What You Get</h2>
-      <ul>
-        <li>Unlimited multi-step synthesis practice problems</li>
-        <li>Complete answer keys with strategic reasoning</li>
-        <li>Reaction pattern recognition and retrosynthesis practice</li>
-        <li>Exam and MCAT-oriented problem-solving techniques</li>
-      </ul>
-    </div>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.6;
+            background-color: #f9fafb;
+            color: #1f2933;
+        }
 
-    <div class="card">
-      <h2>Multi-Step Synthesis Focus</h2>
-      <p>
-        Students receive continuous access to original, exam-style multi-step synthesis problems that have you practice:
-      </p>
-      <ul>
-        <li>Functional group interconversions</li>
-        <li>Stereochemical control</li>
-        <li>Protecting groups</li>
-        <li>Retrosynthesis</li>
-      </ul>
+        header {
+            background: #0f172a;
+            color: white;
+            padding: 3rem 1rem;
+            text-align: center;
+        }
+
+        header h1 {
+            margin-bottom: 0.5rem;
+        }
+
+        header p {
+            max-width: 700px;
+            margin: auto;
+            opacity: 0.9;
+        }
+
+        section {
+            min-height: 100vh;
+            padding: 4rem 1.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .content {
+            max-width: 800px;
+            background: white;
+            padding: 3rem;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+        }
+
+        h2 {
+            color: #0f172a;
+            margin-bottom: 1rem;
+        }
+
+        ul {
+            padding-left: 1.2rem;
+        }
+
+        li {
+            margin-bottom: 0.6rem;
+        }
+
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background: #0f172a;
+            color: white;
+            font-size: 0.9rem;
+        }
+    </style>
+</head>
+
+<body>
+
+<header>
+    <h1>Chemistry Tutoring</h1>
+    <p>Targeted chemistry instruction with a strong focus on multi-step synthesis and exam-level problem solving</p>
+</header>
+
+<section>
+    <div class="content">
+        <h2>Who I Tutor</h2>
+        <ul>
+            <li>High school students (Regents and AP Chemistry)</li>
+            <li>College-level chemistry students (Organic Chemistry I and II)</li>
+            <li>MCAT chemistry and biochemistry preparation</li>
+        </ul>
     </div>
+</section>
+
+<section>
+    <div class="content">
+        <h2>What You Get</h2>
+        <ul>
+            <li>Unlimited multi-step synthesis practice problems</li>
+            <li>Complete answer keys with strategic reasoning</li>
+            <li>Reaction pattern recognition and retrosynthesis practice</li>
+            <li>Exam- and MCAT-oriented problem-solving techniques</li>
+        </ul>
+    </div>
+</section>
+
+<section>
+    <div class="content">
+        <h2>Multi-Step Synthesis Focus</h2>
+        <p>
+            Students receive continuous access to original, exam-style multi-step synthesis problems designed to build
+            confidence and mastery in:
+        </p>
+        <ul>
+            <li>Functional group interconversions</li>
+            <li>Stereochemical control</li>
+            <li>Protecting groups</li>
+            <li>Retrosynthesis</li>
+        </ul>
+    </div>
+</section>
 
     <div class="cta">
       <h2>Payment & Scheduling</h2>
