--- a/index.html
+++ b/index.html
@@ -103,19 +103,18 @@
     </div>
 
     <div class="card">
-      <h2>What You Get</h2>
+      <h2>What You Can Choose to Get</h2>
       <ul>
-        <li>Unlimited multi-step synthesis practice problems</li>
-        <li>Complete answer keys with strategic reasoning</li>
-        <li>Reaction pattern recognition and retrosynthesis practice</li>
-        <li>Exam and MCAT-oriented problem-solving techniques</li>
+        <li>1 - Individual tutoring session ($30/30 min or $45/60 min)</li>
+        <li>2 - 2 multi-step organic synthesis practice problems as a PDF ($5)</li>
+        <li>3 - Answer keys to the 2 multi-step organic synthesis practice problems as a PDF ($5)</li>
       </ul>
     </div>
 
     <div class="card">
-      <h2>Multi-Step Synthesis Focus</h2>
+      <h2>My Focus on Multi-Step Synthesis Problems</h2>
       <p>
-        Students receive continuous access to original, exam-style multi-step synthesis problems that have you practice:
+        I have an unlimited repository of multi-step synthesis problems that can be tailored to your course's exam style and difficulty. Included within each problem can be:
       </p>
       <ul>
         <li>Functional group interconversions</li>
@@ -128,11 +127,11 @@
     <div class="cta">
       <h2>Payment & Scheduling</h2>
       <p>
-        Sessions are flexible and tailored to your course and goals. Payments are accepted via Venmo.
+        Payments are accepted via Venmo and session are flexible and tailored to your course and goals. 
       </p>
       <a href="https://venmo.com/kylehsu1" target="_blank">Pay with Venmo</a>
       <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.85;">
-        1st session free!
+        1st tutoring session free!
       </p>
     </div>
   </section>
