--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <div class="card">
-      <h2>What You Can Choose to Get</h2>
+      <h2>What You Can Get</h2>
       <ul>
         <li>1 - Individual tutoring session ($30/30 min or $45/60 min)</li>
         <li>2 - 2 multi-step organic synthesis practice problems as a PDF ($5)</li>
@@ -112,9 +112,9 @@
     </div>
 
     <div class="card">
-      <h2>My Focus on Multi-Step Synthesis Problems</h2>
+      <h2>A Focus on Multi-Step Synthesis Problems</h2>
       <p>
-        I have an unlimited repository of multi-step synthesis problems that can be tailored to your course's exam style and difficulty. Included within each problem can be:
+        I have an unlimited repository of multi-step synthesis problems that can be tailored to your course's exam style and difficulty. I particularly emphasize:
       </p>
       <ul>
         <li>Functional group interconversions</li>
@@ -131,7 +131,7 @@
       </p>
       <a href="https://venmo.com/kylehsu1" target="_blank">Pay with Venmo</a>
       <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.85;">
-        1st tutoring session free!
+        Please email me when you have submitted a payment. 1st tutoring session free!
       </p>
     </div>
   </section>
